<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Calculator</string>

    <string name="splashHeader">Travel Cost Estimator</string>
    <string name="welcome_message">Estimate your travel costs</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login / Sign Up</string>
    <string name="logout">Logout</string>

    <string name="title_activity_destination">Destinations</string>
    <string name="header_activity_destinations">Destinations</string>
    <string name="available_destinatons">Available Destinations</string>

    <string name="title_activity_login">Login</string>
    <string name="register_button">Create New Account</string>
    <string name="title_activity_register">Create Account</string>

    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="user_password_confirmation">User Password Confirmation</string>
    <string name="register_disclaimer">Disclaimer: I am not responsible for anything.</string>
    <string name="user_email">User Email</string>
    <string name="user_password">User Password</string>
    <string name="trips">Trips</string>
    <string name="title_activity_trips">TripsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="header_activity_trips">Trips</string>
    <string name="create_trip">Create Trip</string>
    <string name="create_trips">Create Trips</string>
    <string name="title_activity_create_trip">CreateTripActivity</string>
    <string name="trip_title">Trip Title</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="update_profile">Update Profile</string>
    <string name="title_activity_single_fragment">SingleFragment</string>
    <string name="trip_delete_button">Delete Trip</string>
    <string name="no_trips_yet">No trips yet</string>
    <string name="loading">loading...</string>
    <string name="title_activity_trip_detail">TripDetail</string>
    <string name="create_costs">Create Cost</string>
    <string name="estimated_total">Estimated Total:</string>
    <string name="zero">$0</string>
    <string name="trip_cost_delete_button">Delete Cost</string>
    <string name="cost_title">Cost Title</string>
    <string name="cost_estimate">cost estimate</string>
    <string name="delete_button">Delete</string>
</resources>
