<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipe_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:weightSum="20">

        <LinearLayout
            android:id="@+id/topEstimate"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#DDDDDD"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="16px"
                android:text="@string/estimated_total"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/estimated_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="16dp"
                android:text="@string/zero"
                android:textSize="24dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/cost_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20" />

        <TextView
            android:id="@id/android:empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/loading"
            android:textSize="36dp" />

        <Button
            android:id="@+id/buttonCreateCost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_costs" />
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>